--- a/tranfer.html
+++ b/tranfer.html
@@ -40,13 +40,29 @@
       } else room_id = getParameterByName("room_id");
     </script>
     <div class="container">
-      <div class="col-left">
+      <div class="col-left bg-gradient-primary-to-secondary">
         <div class="left-box">
+          <div id="sendAlert" hidden>
+            <div class="alert alert-success" role="alert">
+              File(s) sent <strong>Successfully!!</strong>
+              </div>
+          </div>
           <div class="waiting-area">
             <h2 style="color: white">Waiting for Peer</h2>
             <img src="./img/waitingForPeer.gif" />
           </div>
-
+          <div class="modal" id="modalGet">
+            <div class="modal-content">
+              <span class="close">&times;</span>
+              <div id="qrcode"></div>
+            </div>
+          </div>
+          <div class="modal" id="modalScan">
+            <div class="modal-content">
+              <span class="close" id="modalSpan">&times;</span>
+              <div id="qr-reader"></div>
+            </div>
+          </div>
           <div class="drop-area" style="display: none">
             <p id="drop_zone_text">
               Drag one or more files to this <i>drop zone</i>.<br />
@@ -57,7 +73,7 @@
               ondrop="dropHandler(event);"
               ondragover="dragOverHandler(event);"
             >
-              <input type="file" id="fileinput" />
+              <input type="file" id="fileinput" multiple/>
             </div>
 
             <br />
@@ -80,15 +96,18 @@
       </div>
       <div class="col-right">
         <div class="right-box">
-          <img src="./img/logo.jpg" height="186px" width="420" />
+          <a href="./index.html">
+            <img src="./img/logo.jpg" height="186px" width="420px"/>
+          </a>
           <br />
           <br />
           <div class="roomcode-box">
             Room Link:<br />
             <input type="text" id="room_id" />
-            <a id="copy" title="Copy to clipboard">
-              <img src="./img/icons8-clone-figure-64.png" alt="copy icon" />
-            </a>
+            <br>
+            <button id="copy" class="btn btn-outline-primary">Copy</button>
+            <button id="getQR" class="btn btn-outline-primary">Get QRCode</button>
+            <button id="scanQR" class="btn btn-outline-primary">Scan QRCode</button>
           </div>
           <br />
           <msglist></msglist>
@@ -119,18 +138,34 @@
         // Prevent default behavior (Prevent file from being opened)
         ev.preventDefault();
         document.body.style.backgroundColor = "lightgreen";
-        document.getElementById("fileinput").value =
-          event.dataTransfer.getData("file");
-        var filename = ev.dataTransfer.files[0].name;
+        var files = ev.dataTransfer.files;
 
-        $("#drop_zone_text").html(filename + "<br>Start sending file now!");
+        if (files.length > 1) {
+          $("#drop_zone_text").html(
+            files.length + " files dropped. Start sending file(s) now!"
+          );
+        } else {
+          var filename = files[0].name;
+          $("#drop_zone_text").html(filename + "<br>Start sending file now!");
+        }
+
         $("#sendFileBtn").show();
         $("#fileinput").hide();
       }
 
-      $("document").ready(function () {
+      $(document).ready(function () {
         $("#fileinput").change(function () {
-          $("#drop_zone_text").html("File Dropped. Start sending file now!");
+          var files = $(this)[0].files;
+
+          if (files.length > 1) {
+            $("#drop_zone_text").html(
+              files.length + " files selected. Start sending file(s) now!"
+            );
+          } else {
+            var filename = files[0].name;
+            $("#drop_zone_text").html(filename + "<br>Start sending file now!");
+          }
+
           $("#sendFileBtn").show();
         });
       });
@@ -161,6 +196,9 @@
       // const database = getDatabase(app);
     </script>
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <script src="https://unpkg.com/html5-qrcode"></script>
+    <script src="./js/utility.js"></script>
     <script type="module" src="./js/peerConnection.js"></script>
     <script type="module" src="./js/firebaseSignalingServer.js"></script>
 
@@ -168,13 +206,6 @@
       $("#room_id").val(
         location.origin + location.pathname + "?room_id=" + room_id
       );
-    </script>
-    <script>
-      $("#copy").click((e) => {
-        $("#room_id").select();
-        document.execCommand("copy");
-        $("#copy").attr('title', 'copied');
-      });   
     </script>
     <script type="module" src="./js/fileHandling.js"></script>
   </body>
