missing assest resolved

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div>
           <h2 class="display-4 lh-1 text-center mb-4">Our Mission</h2>
           <div class="px-5 px-sm-0">
-            <img class="img-fluid" src="./img/Instantshare2.jpg" alt="..." />
+            <img class="img-fluid" src="./img/share.png" alt="..." />
           </div>
           <p class="lead fw-normal mt-4 text-muted text-center mb-5 mb-lg-0">
             We are a free and independent peer-to-peer (P2P) file sharing service from the India. Experience fast Peer
