--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </p>
             <div class="d-flex flex-column flex-lg-row align-items-center">
               <a class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-primary btn-lg" href="./tranfer.html" role="button">Transfer</a>
-              <a class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-primary btn-lg" href="#" role="button">Download</a>
+              <a class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-primary btn-lg" href="https://github.com/TonyStark0801/Instantly/releases/download/Stable/Instantly.apk" role="button">Download</a>
             </div>
           </div>
         </div>
@@ -242,7 +242,7 @@
     <div class="container px-5">
       <h2 class="text-center text-white font-alt mb-4">Get the app now!</h2>
       <div class="d-flex flex-column flex-lg-row align-items-center justify-content-center">
-        <a class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-light btn-lg" href="#" role="button">Download</a>
+        <a class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-light btn-lg" href="https://github.com/TonyStark0801/Instantly/releases/download/Stable/Instantly.apk" role="button">Download</a>
       </div>
     </div>
   </section>
