--- a/tranfer.html
+++ b/tranfer.html
@@ -179,15 +179,15 @@
 
       // Your web app's Firebase configuration
       const firebaseConfig = {
-    "apiKey": "AIzaSyAK9C8VbI055bv2DNMOD_HaXuA2jBf9_g0",
-    "authDomain": "instantly-77997.firebaseapp.com",
-    "projectId": "instantly-77997",
-    "storageBucket": "instantly-77997.appspot.com",
-    "messagingSenderId": "327612975601",
-    "appId": "1:327612975601:web:f6e9217bf51e053b5e5c50",
-    "measurementId": "G-Z52CBPBZ5W",
-    "databaseURL": "https://instantly-77997-default-rtdb.firebaseio.com/"
-};
+    apiKey: "AIzaSyAK9C8VbI055bv2DNMOD_HaXuA2jBf9_g0",
+    authDomain: "instantly-77997.firebaseapp.com",
+    projectId: "instantly-77997",
+    storageBucket: "instantly-77997.appspot.com",
+    messagingSenderId: "327612975601",
+    appId: "1:327612975601:web:f6e9217bf51e053b5e5c50",
+    measurementId: "G-Z52CBPBZ5W",
+    databaseURL: "https://instantly-77997-default-rtdb.firebaseio.com/"
+    };
 
       // Initialize Firebase
       const app = firebase.initializeApp(firebaseConfig);
