--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               <div class="col-md-6 mb-5">
                 <!-- Feature item-->
                 <div class="text-center">
-                  <i class="bi-phone icon-feature text-gradient d-block mb-3"></i>
+                  <i class="bi-speedometer2 icon-feature text-gradient d-block mb-3"></i>
                   <h3 class="font-alt">Blazing Fast and Secure Transfers</h3>
                   <p class="text-muted mb-0">
                     Your data is end-to-end encrypted with incredible transfer speed.
@@ -154,7 +154,7 @@
               <div class="col-md-6 mb-5">
                 <!-- Feature item-->
                 <div class="text-center">
-                  <i class="bi-camera icon-feature text-gradient d-block mb-3"></i>
+                  <i class="bi-cloud-slash icon-feature text-gradient d-block mb-3"></i>
                   <h3 class="font-alt">Serverless Architecture</h3>
                   <p class="text-muted mb-0">
                     Instantly uses the peer-to-peer technology thus avoiding the needless server overhead.
@@ -176,7 +176,7 @@
               <div class="col-md-6">
                 <!-- Feature item-->
                 <div class="text-center">
-                  <i class="bi-patch-check icon-feature text-gradient d-block mb-3"></i>
+                  <i class="bi-arrows-fullscreen  icon-feature text-gradient d-block mb-3"></i>
                   <h3 class="font-alt">No Size Limits</h3>
                   <p class="text-muted mb-0">
                     Because we don't store the data, there's no need for file size limits. Just share files of any size.
