--- a/index.html
+++ b/index.html
@@ -250,12 +250,9 @@
   <footer class="bg-black text-center py-4">
     <div class="container px-5">
       <div class="text-white-50 small">
+        <a href="https://github.com/TonyStark0801/Instantly"> <i class="bi-github text-gradient d-block " style="font-size:3rem"></i></a>
         <div class="mb-2">&copy; Instantly 2023. All Rights Reserved.</div>
-        <a href="#!">Privacy</a>
-        <span class="mx-1">&middot;</span>
-        <a href="#!">Terms</a>
-        <span class="mx-1">&middot;</span>
-        <a href="#!">FAQ</a>
+      
       </div>
     </div>
   </footer>
