added animation effects

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="./css/styles.css" rel="stylesheet" />
+    <link href="./css/animate.css" rel="stylesheet" />
   </head>
 
   <body id="page-top">
@@ -108,13 +109,13 @@
               </p>
               <div class="d-flex flex-column flex-lg-row align-items-center">
                 <a
-                  class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-primary btn-lg"
+                  class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-primary btn-lg pulsate-bck"
                   href="transfer.html"
                   role="button"
                   >Transfer</a
                 >
                 <a
-                  class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-primary btn-lg"
+                  class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-primary btn-lg pulsate-fwd"
                   href="https://github.com/TonyStark0801/Instantly/releases/download/Stable/Instantly.apk"
                   role="button"
                   >Download</a
@@ -354,7 +355,7 @@
           class="d-flex flex-column flex-lg-row align-items-center justify-content-center"
         >
           <a
-            class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-light btn-lg"
+            class="me-lg-3 mb-4 mb-lg-0 btn btn-outline-light btn-lg pulsate-fwd"
             href="https://github.com/TonyStark0801/Instantly/releases/download/Stable/Instantly.apk"
             role="button"
             >Download</a
